[gd_scene load_steps=4 format=3 uid="uid://bi3yu8dy2tqcv"]

[ext_resource type="Script" uid="uid://bdsvxitevdbup" path="res://Scripts/AI/Boss/Kostyanoy_AI.gd" id="1_ilmcf"]
[ext_resource type="PackedScene" uid="uid://dhxijh84orh8w" path="res://Scenes/Bodies/Boss/Kostyanoy.tscn" id="2_xa5bx"]
[ext_resource type="PackedScene" uid="uid://41rkgd8r21fm" path="res://Scenes/UI/Boss_UI.tscn" id="3_yakyt"]

[node name="Kostyanoy" type="Node2D" node_paths=PackedStringArray("raycast_tiles")]
script = ExtResource("1_ilmcf")
raycast_tiles = NodePath("Boss_body/RayCast2D")

[node name="Boss_body" parent="." instance=ExtResource("2_xa5bx")]

[node name="RayCast2D" type="RayCast2D" parent="Boss_body"]
position = Vector2(0, -17)
target_position = Vector2(35, 0)
collision_mask = 8

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="Boss_body"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(32.4, 14.6)
enable_node_path = NodePath("../..")

[node name="Boss_UI" type="CanvasLayer" parent="."]

[node name="Boss_UI" parent="Boss_UI" node_paths=PackedStringArray("boss_body") instance=ExtResource("3_yakyt")]
visible = false
boss_HP_color = Color(0.890196, 0.47451, 0.160784, 1)
boss_body = NodePath("../../Boss_body")

[node name="Timer_change_direction" type="Timer" parent="."]
one_shot = true

[node name="Timer_shoot" type="Timer" parent="."]

[node name="Timer_jump" type="Timer" parent="."]

[connection signal="got_hit" from="Boss_body" to="Boss_UI/Boss_UI" method="_on_boss_body_got_hit"]
[connection signal="nearby_tile" from="Boss_body" to="." method="_on_boss_body_nearby_tile"]
[connection signal="now_dead" from="Boss_body" to="." method="_boss_death"]
[connection signal="timeout" from="Timer_change_direction" to="." method="_on_timer_change_direction_timeout"]
[connection signal="timeout" from="Timer_shoot" to="." method="_on_timer_shoot_timeout"]
[connection signal="timeout" from="Timer_jump" to="." method="_on_timer_jump_timeout"]
